@@ -1,20 +1,21 @@
 package no.nav.testnav.apps.importpersonservice.domain;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 import no.nav.testnav.apps.importpersonservice.controller.dto.PersonListDTO;
+
+import java.util.List;
 
 public class PersonList {
 
     private final List<Person> list;
 
     public PersonList(PersonListDTO dto) {
-        this.list = dto.getPersonList().stream().map(Person::new).collect(Collectors.toList());
+        this.list = dto.getPersonList().stream().map(Person::new)
+                .toList();
     }
 
     public PersonList(List<String> identer) {
-        this.list = identer.stream().map(Person::new).collect(Collectors.toList());
+        this.list = identer.stream().map(Person::new)
+                .toList();
     }
 
     public List<Person> getList() {
